--- a/Atividades/atividade-pratica-01/src/css/base.css
+++ b/Atividades/atividade-pratica-01/src/css/base.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400&display=swap');
 
 body {
-  background-color: #fff;
   -webkit-font-smoothing: antialiased;
   font-family: 'Roboto',Arial,sans-serif;
   font-size: 1.25rem;
@@ -12,10 +11,15 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  color: #3e4444;
+  color: #000;
 }
 
-h1, h2,  h3, h4, h5, h6 {
-  color: #010203;
+h1 {
+  color: #fff;
+  font-family: 'Nunito', sans-serif;
+}
+
+h2,  h3, h4, h5, h6{
+  color: inherit;
   font-family: 'Nunito', sans-serif;
 }
