--- a/Atividades/atividade-pratica-01/src/css/styles.css
+++ b/Atividades/atividade-pratica-01/src/css/styles.css
@@ -4,8 +4,8 @@ header{
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  background-color: darkseagreen;
-  border: #223691 solid 0.05rem;
+  background-color: #1b263b;
+  border: #772e25 solid 0.05rem;
   height: 6rem;
 }
 
@@ -13,16 +13,16 @@ header .navbar{
   padding-top: 1rem;
 }
 
-header .navbar .nav-item{
-  color:#223691;
-}
-
 header .navbar > .nav-item{
   margin-left: 0.5rem;
 }
 
+header .navbar .nav-item{
+  color:#c44536;
+}
+
 header .navbar .nav-item:hover{
-  color:#0e84c9;
+  color:#dddddd;
   transition: ease 0.2s;
 }
 
@@ -31,7 +31,7 @@ header .navbar .nav-item:hover{
 main{
   flex: 1;
   width: 100%;
-  background-color: honeydew;
+  background-color:#e9e0df;
   display:flex;
   align-items: center;
   justify-content: center;
@@ -52,10 +52,11 @@ footer{
   display: flex;
   align-items: center;
   justify-content: center;
-  border: #223691 solid 0.05rem;
+  border: #772e25 solid 0.05rem;
+  background-color: #c44536;
 }
 
 footer div{
-  color: darkblue;
+  color:#000;
 }
 
