--- a/Atividades/atividade-pratica-01/src/css/block/report.css
+++ b/Atividades/atividade-pratica-01/src/css/block/report.css
@@ -13,6 +13,7 @@
 .report table{
   text-align: center;
   padding: 0 1rem;
+  font-size: 1rem;
 }
 
 .report table,td,th{
@@ -22,9 +23,10 @@
 }
 
 .report table caption{
-  font-size: 30px;
+  font-size: 2rem;
   font-family: Tahoma;
   font-weight: bold;
+  padding-bottom: 1rem;
 }
 
 .report table thead tr{
